syntax = "proto3";

package nats;
option go_package = "./natspb";

enum ObjectStoreScope{
  SCOPE_UNDEFINED = 0;
  SCOPE_WORKFLOW = 1;
  SCOPE_PROJECT = 2;
  }

message ObjectStore {
  string name = 1;
  ObjectStoreScope scope = 2;
}

message Process {
  string name = 1;
  repeated string subscriptions = 2;
  optional ObjectStore object_store = 3;
}

message Workflow {
  string name = 1;
  repeated Process processes = 2;
}

message ProcessStreamConfig {
  string subject = 1;
  repeated string subscriptions = 2;
}

message WorkflowStreamConfig {
  string stream = 1;
  map<string, ProcessStreamConfig> processes = 2;
}

message WorkflowObjectStoreConfig {
  map<string, string> processes = 1;
}

message WorkflowKeyValueStoreConfig {
  string keyValueStore = 1;
  map<string, string> processes = 2;
}

message CreateStreamsRequest {
string product_id = 1;
  string version_tag = 2;
  repeated Workflow workflows = 3;
}

message CreateObjectStoresRequest {
  string product_id = 1;
  string version_tag = 2;
  repeated Workflow workflows = 3;
}

message CreateVersionKeyValueStoresRequest {
  string product_id = 1;
  string version_tag = 2;
  repeated Workflow workflows = 3;
}

message CreateGlobalKeyValueStoreRequest {
  string product_id = 1;
}

message DeleteStreamsRequest {
  string product_id = 1;
  string version_tag = 2;
}

message DeleteObjectStoresRequest {
  string product_id = 1;
  string version_tag = 2;
}

message DeleteVersionKeyValueStoresRequest {
  string product_id = 1;
  string version_tag = 2;
  repeated Workflow workflows = 3;
}

message DeleteGlobalKeyValueStoreRequest {
  string product_id = 1;
}

message CreateStreamsResponse {
  map<string, WorkflowStreamConfig> workflows = 1;
}

message CreateObjectStoresResponse {
  map<string, WorkflowObjectStoreConfig> workflows = 1;
}

message DeleteResponse {
  string message = 1;
}

message CreateVersionKeyValueStoresResponse {
  string key_value_store = 1;
  map<string, WorkflowKeyValueStoreConfig> workflows = 2;
}

message CreateGlobalKeyValueStoreResponse {
  string global_key_value_store = 1;
}

message UpdateKeyValueConfigurationRequest {
  repeated KeyValueConfiguration key_value_stores_config = 1;
}

message KeyValueConfiguration {
  string key_value_store = 1;
  map<string, string> configuration = 2;
}

message UpdateKeyValueConfigurationResponse {
  string message = 1;
}

service NatsManagerService {
  rpc CreateStreams (CreateStreamsRequest) returns (CreateStreamsResponse);
  rpc CreateObjectStores (CreateObjectStoresRequest) returns (CreateObjectStoresResponse);
  rpc CreateVersionKeyValueStores (CreateVersionKeyValueStoresRequest) returns (CreateVersionKeyValueStoresResponse);
  rpc CreateGlobalKeyValueStore (CreateGlobalKeyValueStoreRequest) returns (CreateGlobalKeyValueStoreResponse);
  rpc UpdateKeyValueConfiguration(UpdateKeyValueConfigurationRequest) returns (UpdateKeyValueConfigurationResponse);
  rpc DeleteStreams (DeleteStreamsRequest) returns (DeleteResponse);
  rpc DeleteObjectStores (DeleteObjectStoresRequest) returns (DeleteResponse);
  rpc DeleteVersionKeyValueStores (DeleteVersionKeyValueStoresRequest) returns (DeleteResponse);
  rpc DeleteGlobalKeyValueStore (DeleteGlobalKeyValueStoreRequest) returns (DeleteResponse);
};
